# build-target

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
src/: arch.rs  endian.rs  env.rs  family.rs  lib.rs  os.rs  pointer_width.rs  profile.rs  target.rs  triple.rs  utils.rs  vendor.rs
tests/: basic.rs
tests/test-crate/: Cargo.toml  build.rs
tests/test_data/: env.txt
