[package]
name = "build-target"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/OpenByteDev/build-target" 
homepage = "https://github.com/OpenByteDev/build-target"
documentation = "https://docs.rs/build-target"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2018"
categories = ["development-tools::build-utils"]
keywords = ["build", "target"]

[dev-dependencies]
serial_test = "0.5"
