[package]
name = "build-target"
version = "0.2.1"
description = "A crate that provides programmatic access to information about the current build target."
readme = "README.md"
repository = "https://github.com/OpenByteDev/build-target" 
homepage = "https://github.com/OpenByteDev/build-target"
documentation = "https://docs.rs/build-target"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
categories = ["development-tools::build-utils"]
keywords = ["build", "target", "env", "utils"]
